--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "version compare",
     "version update"
   ],
-  "version": "0.0.2",
+  "version": "0.0.4",
   "type": "module",
-  "module": "dist/index.js",
   "main": "dist",
   "files": [
     "dist",
-    "types"
+    "types/lib"
   ],
-  "types": "types/index.d.ts",
+  "types": "types/lib/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "wangwk"
